ong changing flyingpigeon to blackswan

--- a/blackswan/default.cfg
+++ b/blackswan/default.cfg
@@ -1,10 +1,10 @@
 [metadata:main]
-identification_title = Flyingpigeon
-identification_abstract = Processes for climate data, indices and extreme events
-identification_keywords = PyWPS,WPS,OGC,processing,Birdhouse,flyingpigeon
+identification_title = Blackswan
+identification_abstract = Processes for extreme events
+identification_keywords = PyWPS,WPS,OGC,processing,Birdhouse,blackswan
 identification_keywords_type = theme
-provider_name = Birdhouse/Flyingpigeon
-provider_url = http://flyingpigeon.readthedocs.org/en/latest/
+provider_name = Birdhouse/Blackswan
+provider_url = http://blackswan.readthedocs.org/en/latest/
 
 [server]
 url = http://localhost:5000/wps
