--- a/environment.yml
+++ b/environment.yml
@@ -70,7 +70,8 @@ dependencies:
 #- hdf5=1.8.18=1
 - libnetcdf=4.4.1.1
 - python-ecmwf_grib=1.23.1
-- python-cdo=1.3.3
+#- python-cdo=1.3.3
+- python-cdo=1.3.4
 # - ocgis=2.0.0
 - ocgis-next=2.1.0.dev1 # =1.4.0.dev1=py27_7  #  nesii/channel/ocgis-next
 - icclim
@@ -80,7 +81,7 @@ dependencies:
 - gdal=2.1.3
 # ################
 # # analogue
-#- castf90=0.1.5
+- castf90=0.1.5
 # ################
 # # r
 - cairo # for X11 independend plot support
