--- a/environment.yml
+++ b/environment.yml
@@ -91,6 +91,7 @@ dependencies:
 - r-ncdf4=1.15=1
 - r-fields #=8.4 conflicts with r3.3.1 needs 3.2
 - r-gridextra #=2.0.0
+- r-ggplot2
 - harfbuzz
 # #- r-cairo#=1.5_9 build in r-base
 ################
