--- a/environment.yml
+++ b/environment.yml
@@ -1,10 +1,11 @@
 name: blackswan
 channels:
+# ocgis
+- nesii/label/ocgis-next
+- nesii/label/dev-esmf
 - birdhouse
 - conda-forge
 - defaults
-# ocgis
-- nesii
 # the r hell ...
 - r
 - bioconda  # for r-mclust
@@ -20,6 +21,7 @@ dependencies:
 - setuptools=27.2.0
 - icu=58.1
 - libxslt
+- json-c=0.12.1 # See issue #251
 - pypdf2
 ################
 # tests
@@ -37,7 +39,7 @@ dependencies:
 # wps
 - nginx
 - supervisor=3.3.1
-- gunicorn
+- gunicorn=19
 - gevent
 - pywps=4.0.0
 - mako
@@ -50,7 +52,7 @@ dependencies:
 ################
 # numeric
 - numpy
-- scipy
+- scipy=1.1.0=py27_blas_openblas_200 # pinned due to issue #248
 - pandas #=0.18.1
 - statsmodels #=0.6.1
 - scikit-learn #=0.17.1
@@ -70,11 +72,11 @@ dependencies:
 #- hdf5=1.8.18=1
 - libnetcdf=4.4.1.1
 - python-ecmwf_grib=1.23.1
-#- python-cdo=1.3.3
 - python-cdo=1.3.4
-# - ocgis=2.0.0
-- ocgis-next=2.1.0.dev1 # =1.4.0.dev1=py27_7  #  nesii/channel/ocgis-next
-#- icclim
+- ocgis-next
+- esmf
+- esmpy
+# - icclim
 - proj4 #=4.9.3
 - geos #=3.5.1=1
 - jpeg=9b
@@ -98,13 +100,14 @@ dependencies:
 # esgf
 - esgf-pyclient
 # satetlite
-#- rasterio
-#- retrying
+- rasterio
+- retrying
 - pip:
-#  - pygbif==0.2.0 #0.1.4
+  - pygbif==0.2.0 #0.1.4
   - sphinx-autoapi==0.5.0
 #  - cdo==1.3.0
-#  - sentinelsat
+  # - sentinelsat
+  - --editable=git+https://github.com/huard/sphinx-autodoc-pywps.git#egg=sphinx_autodoc_pywps
 #  - planet
 #  - rasterio
 #  - retrying
