--- a/environment.yml
+++ b/environment.yml
@@ -87,10 +87,12 @@ dependencies:
 # ################
 # # r
 - cairo # for X11 independend plot support
-- r=3.2  # 3.3 conflicts with icu=56
+- r #=3.2  # 3.3 conflicts with icu=56
 - rpy2 #=2.7.0
 - r-mclust #=5.1 subsuituted by cluster
 - r-ncdf4=1.15=1
+- r-pracma
+- r-future.apply
 - r-fields #=8.4 conflicts with r3.3.1 needs 3.2
 - r-gridextra #=2.0.0
 - r-ggplot2
