--- a/environment.yml
+++ b/environment.yml
@@ -96,6 +96,7 @@ dependencies:
 - r-fields #=8.4 conflicts with r3.3.1 needs 3.2
 - r-gridextra #=2.0.0
 - r-ggplot2
+- r-extremes
 - harfbuzz
 # #- r-cairo#=1.5_9 build in r-base
 ################
