--- a/loc_custom_exmpl.cfg
+++ b/loc_custom_exmpl.cfg
@@ -4,8 +4,8 @@ outputurl = http://localhost:8096/outputs
 workdir = /homel/nkadyg/birdhouse/var/lib/twitcher
 outputpath = /homel/nkadyg/birdhouse/var/lib/pywps/outputs/blackswan
 [logging]
-#level = DEBUG
-level = INFO
+level = DEBUG
+# level = INFO
 
 #[data]
 [cache]
